# Dex-Math-Core-rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: README.md  competitor_delta.md  competitor_matrix.md  competitor_report.md  curve_hydra_differential.md  iteration_comparison.md  results-2026-04-23.csv
docs/: MODULE_MAP.md
pool_resolver/: curve_pool_registry.json
src/: lib.rs
src/core/: error.rs  mod.rs  precision.rs  types.rs
src/data/: curve_registry.rs  kyber_pool_state.rs  mod.rs  pool_state.rs
src/dex/: adapter.rs  mod.rs
src/dex/balancer/: adapter_math.rs  conversions.rs  math.rs  mod.rs
src/dex/common/: mod.rs
src/dex/curve/: adapter_math.rs  curve_math_pool.rs  math.rs  mod.rs
src/dex/kyber/: adapter_math.rs  math.rs
src/dex/uniswap_v2/: adapter_math.rs  math.rs
src/dex/uniswap_v3/: adapter_math.rs  math.rs  mod.rs
src/dex/uniswap_v4/: adapter_math.rs  mod.rs
